Ensure window ready process runs after window is made visible
The window ready process (the result of getReadyProcess()) was being
executed while the transition for opening the window (opacity
0%->100%, scale 50%->100%) was still being animated.

If the ready process focussed a field inside the dialog (this is
basically its main purpose) that happened to have a dropdown menu,
the menu would be misaligned, as the dialog was still being shown at
50% scale (and invisible) at the time.

Refactor window open/close animations to correct this. Summary:
* Added a 250 ms delay between the setup process and ready process.
  Ready process now runs after window is actually visible.
* In order to correctly animate the transition with the new delay:
  * Window is shown/hidden by the -active class, not -setup.
  * Transition begins when -setup class is added/removed, not -ready.
  * Window size is updated earlier, otherwise it broke the transition.
  * The -setup class is removed earlier, during hold, not teardown.

Interesting side effects:
* If the ready process fails, the window will now open and immediately
  close, instead of never opening at all.
* If the ready process adds some content to the window, this will now
  be visibly delayed. Code doing that should be in the setup process.

Previous sequence of actions      | New sequence of actions
--------------------------------- | ---------------------------------
                                  |
Opening a window:                 | Opening a window:
-----------------                 | -----------------
Window setup:                     | Window setup:
- Setup process                   | - Setup process
- Add class: ...-active           | - Update window size
- Add class: ...-setup            | - Add class: ...-active
  - Window shown                  |   - Window shown
- Update window size              | - Add class: ...-setup
                                  |   - Transition triggered
                                  |

--- a/src/styles/WindowManager.less
+++ b/src/styles/WindowManager.less
@@ -18,7 +18,7 @@
 			padding: 1em;
 		}
 
-		&.oo-ui-window-setup > .oo-ui-window-frame {
+		&.oo-ui-window-active > .oo-ui-window-frame {
 			position: absolute;
 			right: 0;
 			left: 0;
