--- a/src/themes/apex/windows.less
+++ b/src/themes/apex/windows.less
@@ -259,12 +259,10 @@
 	&-modal > .oo-ui-dialog {
 		background-color: rgba( 255, 255, 255, 0.5 );
 		opacity: 0;
-
 		.oo-ui-transition( opacity @medium-ease );
 
 		> .oo-ui-window-frame {
 			background-color: #fff;
-
 			opacity: 0;
 			.oo-ui-transform( scale( 0.5 ) );
 			.oo-ui-transition( all @medium-ease );
@@ -273,9 +271,7 @@
 		&.oo-ui-window-setup {
 			// Fade window overlay
 			opacity: 1;
-		}
 
-		&.oo-ui-window-ready {
 			> .oo-ui-window-frame {
 				// Fade frame
 				opacity: 1;
